[package]
name = "actix-web-stackdriver-middleware"
version = "0.2.2"
authors = ["Alex Pearson <alex@alexpear.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NAlexPear/actix-web-stackdriver-middleware"
description = "Stackdriver-compatible HTTP request/response logging middleware for actix_web"
keywords = ["actix", "middleware", "stackdriver", "logging"]

[badges]
github = { repository = "NAlexPear/actix-web-stackdriver-middleware" } 
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.3.4"
pin-project = "0.4.8"
serde_json = "1"

[dependencies.actix-web]
default-features = false
version = "2"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1"
